configs/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payment-production
  labels:
    app.kubernetes.io/part-of: paysecure
    paysecure.io/data-zone: cde
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
